# ordinals_canister

./: .gitignore  Cargo.toml  EXAMPLES  LICENSE  README.md  canister_ids.json  dfx.json
src/btc_ordinals/: Cargo.toml  btc_ordinals.did  ic_btc_ordinals.did
src/btc_ordinals/src/: http.rs  lib.rs  types.rs  utils.rs
src/btc_ordinals/src/services/: mod.rs
src/btc_ordinals/src/services/bitgem/: sat_info.rs  sat_range.rs
src/btc_ordinals/src/services/hiro/: brc20_details.rs  brc20_holders.rs  inscription_content.rs  inscription_info.rs  sat_info.rs  sat_inscriptions.rs
src/e2e/: Hex.mo  Main.mo
src/ic_btc_ordinals/: Cargo.toml  ic_btc_ordinals.did
src/ic_btc_ordinals/src/: http.rs  lib.rs  types.rs  utils.rs
src/ic_btc_ordinals/src/services/: mod.rs
src/ic_btc_ordinals/src/services/bitgem/: mod.rs  sat_info.rs  sat_range.rs
src/ic_btc_ordinals/src/services/hiro/: brc20_details.rs  brc20_holders.rs  inscription_content.rs  inscription_info.rs  mod.rs  sat_info.rs  sat_inscriptions.rs
