[package]
name = "btc_ordinals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.2"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
lazy_static = "1.4.0"

